app/javascript/stylesheets/hitobito/_utilities.scss
//  Copyright (c) 2012-2022, hitobito AG. This file is part of
//  hitobito and licensed under the Affero General Public License version 3
//  or later. See the COPYING file at the top-level directory or at
//  https://github.com/hitobito/hitobito.

$utilities: map-merge(
  $utilities,
  (
    "max-width": (
      property: max-width,
      class: mw,
      values: (
        100: 100%,
        50: 50%,
        15ch: 15ch, // use .mw-100.mw-md-15ch as a replacement for span2
        20ch: 20ch, // use .mw-100.mw-md-20ch as a replacement for span3
        47ch: 47ch,
        60ch: 60ch, // use .mw-100.mw-md-60ch as a replacement for span6
        63ch: 63ch,
        90ch: 90ch, // use .mw-100.mw-md-90ch as a replacement for span8
      ),
      responsive: true,
    ),
    "margin-left": (
      property: margin-left,
      class: ml,
      values: (
        0: 0,
        1: 0.25rem,
        2: 0.5rem,
        3: 1rem,
        4: 1.5rem,
        5: 3rem,
        auto: auto
      ),
      responsive: true,
    ),
    "margin-right": (
      property: margin-right,
      class: mr,
      values: (
        0: 0,
        1: 0.25rem,
        2: 0.5rem,
        3: 1rem,
        4: 1.5rem,
        5: 3rem,
        auto: auto
      ),
      responsive: true,
    ),
    "padding-left": (
      property: padding-left,
      class: pl,
      values: (
        0: 0,
        1: 0.25rem,
        2: 0.5rem,
        3: 1rem,
        4: 1.5rem,
        5: 3rem,
        auto: auto
      ),
      responsive: true,
    ),
    "padding-right": (
      property: padding-right,
      class: pr,
      values: (
        0: 0,
        1: 0.25rem,
        2: 0.5rem,
        3: 1rem,
        4: 1.5rem,
        5: 3rem,
        auto: auto
      ),
      responsive: true,
    ),
  ),
);

